--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2FFF8"
-    tools:context=".SplashScreenActivity" >
+    android:background="#FDFDED"
+    tools:context=".SplashScreenActivity">
 
     <ImageView
         android:id="@+id/imageView"
